// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-details with args {
  toggleClosed: 'Show details',
  toggleOpened: 'Hide details',
  expanded: true
} 1`] = `
<mg-details>
  <template shadowrootmode="open">
    <details class="mg-c-details" open="">
      <summary>
        <slot name="summary"></slot>
        <span class="mg-c-details__toggle">
          <mg-icon class="mg-c-details__toggle-icon" icon="chevron-up"></mg-icon>
          <span>
            Hide details
          </span>
        </span>
      </summary>
      <div class="mg-c-details__details">
        <slot name="details"></slot>
      </div>
    </details>
  </template>
  <span slot="summary">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </span>
  <p slot="details">
    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</mg-details>
`;

exports[`mg-details with args {
  toggleClosed: 'Show details',
  toggleOpened: 'Hide details',
  hideSummary: true
} 1`] = `
<mg-details>
  <template shadowrootmode="open">
    <details class="mg-c-details">
      <summary>
        <slot name="summary"></slot>
        <span class="mg-c-details__toggle">
          <mg-icon class="mg-c-details__toggle-icon mg-c-details__toggle-icon--reverse" icon="chevron-up"></mg-icon>
          <span class="mg-u-visually-hidden">
            Show details
          </span>
        </span>
      </summary>
      <div class="mg-c-details__details">
        <slot name="details"></slot>
      </div>
    </details>
  </template>
  <span slot="summary">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </span>
  <p slot="details">
    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</mg-details>
`;

exports[`mg-details with args { toggleClosed: 'Show details', toggleOpened: 'Hide details' } 1`] = `
<mg-details>
  <template shadowrootmode="open">
    <details class="mg-c-details">
      <summary>
        <slot name="summary"></slot>
        <span class="mg-c-details__toggle">
          <mg-icon class="mg-c-details__toggle-icon mg-c-details__toggle-icon--reverse" icon="chevron-up"></mg-icon>
          <span>
            Show details
          </span>
        </span>
      </summary>
      <div class="mg-c-details__details">
        <slot name="details"></slot>
      </div>
    </details>
  </template>
  <span slot="summary">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </span>
  <p slot="details">
    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</mg-details>
`;

exports[`mg-details with empty summary slot 1`] = `
<mg-details slotsummary="">
  <template shadowrootmode="open">
    <details class="mg-c-details mg-c-details--empty-summary">
      <summary>
        <slot name="summary"></slot>
        <span class="mg-c-details__toggle">
          <mg-icon class="mg-c-details__toggle-icon mg-c-details__toggle-icon--reverse" icon="chevron-up"></mg-icon>
          <span>
            Show details
          </span>
        </span>
      </summary>
      <div class="mg-c-details__details">
        <slot name="details"></slot>
      </div>
    </details>
  </template>
  <p slot="details">
    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</mg-details>
`;

exports[`mg-details with empty summary slot 2`] = `
<mg-details>
  <template shadowrootmode="open">
    <details class="mg-c-details mg-c-details--empty-summary">
      <summary>
        <slot name="summary"></slot>
        <span class="mg-c-details__toggle">
          <mg-icon class="mg-c-details__toggle-icon mg-c-details__toggle-icon--reverse" icon="chevron-up"></mg-icon>
          <span>
            Show details
          </span>
        </span>
      </summary>
      <div class="mg-c-details__details">
        <slot name="details"></slot>
      </div>
    </details>
  </template>
  <span slot="summary"></span>
  <p slot="details">
    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</mg-details>
`;

exports[`mg-details with empty summary slot 3`] = `
<mg-details>
  <template shadowrootmode="open">
    <details class="mg-c-details mg-c-details--empty-summary">
      <summary>
        <slot name="summary"></slot>
        <span class="mg-c-details__toggle">
          <mg-icon class="mg-c-details__toggle-icon mg-c-details__toggle-icon--reverse" icon="chevron-up"></mg-icon>
          <span>
            Show details
          </span>
        </span>
      </summary>
      <div class="mg-c-details__details">
        <slot name="details"></slot>
      </div>
    </details>
  </template>
  <span slot="summary"></span>
  <p slot="details">
    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</mg-details>
`;
